{
  "version": 4,
  "terraform_version": "1.3.6",
  "serial": 138,
  "lineage": "4bd6d2d3-dc41-1d58-6046-48b1fc867068",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_address",
      "name": "static",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "34.105.86.239",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2023-01-11T16:36:27.416-08:00",
            "id": "projects/totemic-cursor-374417/regions/us-west1/addresses/ipv4-address",
            "name": "ipv4-address",
            "network_tier": "PREMIUM",
            "prefix_length": 0,
            "project": "totemic-cursor-374417",
            "region": "us-west1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/totemic-cursor-374417/regions/us-west1/addresses/ipv4-address",
            "users": [
              "https://www.googleapis.com/compute/v1/projects/totemic-cursor-374417/zones/us-west1-a/instances/vm-wordpress"
            ]
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2023-01-11T16:36:38.833-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/totemic-cursor-374417/global/firewalls/firewall-http",
            "log_config": [],
            "name": "firewall-http",
            "network": "https://www.googleapis.com/compute/v1/projects/totemic-cursor-374417/global/networks/vpc-wordpress-teste",
            "priority": 1000,
            "project": "totemic-cursor-374417",
            "self_link": "https://www.googleapis.com/compute/v1/projects/totemic-cursor-374417/global/firewalls/firewall-http",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "firewall-http"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2023-01-11T16:36:39.628-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/totemic-cursor-374417/global/firewalls/allow-ssh",
            "log_config": [],
            "name": "allow-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/totemic-cursor-374417/global/networks/vpc-wordpress-teste",
            "priority": 1000,
            "project": "totemic-cursor-374417",
            "self_link": "https://www.googleapis.com/compute/v1/projects/totemic-cursor-374417/global/firewalls/allow-ssh",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "ssh"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-1804-bionic-v20220213",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/totemic-cursor-374417/zones/us-west1-a/disks/vm-wordpress"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/totemic-cursor-374417/zones/us-west1-a/instances/vm-wordpress",
            "instance_id": "1813789250895931592",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "f1-micro",
            "metadata_fingerprint": "YjBWBiruVgc=",
            "metadata_startup_script": "#!/bin/bash\n\nsudo apt update \n\nsudo apt install apt-transport-https ca-certificates curl software-properties-common\n\ncurl -fsSL https://download.docker.com/linux/ubuntu/gpg | sudo apt-key add -\n\nsudo add-apt-repository \"deb [arch=amd64] https://download.docker.com/linux/ubuntu focal stable\"\n\nsudo apt update\n\napt-cache policy docker-ce\n\nsudo apt install docker-ce -y \n\nsudo usermod -aG docker ${USER}\n\nsudo mkdir -p /docker/mysql/wordpress [...]
            "name": "vm-wordpress",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.105.86.239",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/totemic-cursor-374417/global/networks/vpc-wordpress-teste",
                "network_ip": "10.0.1.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/totemic-cursor-374417/regions/us-west1/subnetworks/subnet-wordpress-teste",
                "subnetwork_project": "totemic-cursor-374417"
              }
            ],
            "project": "totemic-cursor-374417",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/totemic-cursor-374417/zones/us-west1-a/instances/vm-wordpress",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "firewall-http",
              "ssh"
            ],
            "tags_fingerprint": "kaJcQVJMSAw=",
            "zone": "us-west1-a"
          },
          "dependencies": [
            "google_compute_address.static",
            "google_compute_subnetwork.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc_network",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/totemic-cursor-374417/global/networks/vpc-wordpress-teste",
            "mtu": 1460,
            "name": "vpc-wordpress-teste",
            "project": "totemic-cursor-374417",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/totemic-cursor-374417/global/networks/vpc-wordpress-teste"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2023-01-11T16:36:40.114-08:00",
            "gateway_address": "10.0.1.1",
            "id": "projects/totemic-cursor-374417/regions/us-west1/subnetworks/subnet-wordpress-teste",
            "ip_cidr_range": "10.0.1.0/24",
            "name": "subnet-wordpress-teste",
            "network": "https://www.googleapis.com/compute/v1/projects/totemic-cursor-374417/global/networks/vpc-wordpress-teste",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "totemic-cursor-374417",
            "purpose": "PRIVATE",
            "region": "us-west1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/totemic-cursor-374417/regions/us-west1/subnetworks/subnet-wordpress-teste",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    }
  ]
}